<resources>
    <string name="app_name">TEP-TimeshareExchangePlatform</string>
    <string name="ellipsis">&#8230;</string>
    <string name="default_notify_title">Message</string>
    <string name="book_now">Book Now</string>
    <string name="search_location_bar">Enter location, hotel</string>
    <string name="near_me_location">Nearby Hotels</string>
    <string name="where_to_go">Still don\'t know where you want to go?</string>
    <string name="exlpore_the_world">Tap to explore the world</string>
    <string name="popular_destination_titler">Popular</string>
    <string name="date_range_picker">Select time period</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="verify">Verified and Protected</string>
    <string name="back">Back</string>
    <string name="btn_logout">Logout</string>
    <string name="login">Login</string>
    <string name="select_lang">Select Language</string>
    <string name="description">Premier Pearl Hotel Vung Tau toa lac tai khu vuc / thanh
pho Phuong 2.

Quay tiếp tân 24 giờ luôn sẵn sàng phục vụ quý khách từ
thủ tục nhận phòng đến trả phòng hay bất kỳ yêu cầu nào.
Nếu cần giúp đỡ xin hãy liên hệ đội ngũ tiếp tân, chúng tôi
luôn sẵn sàng hỗ trợ quý khách.

Sóng WiFi phủ khắp các khu vực chung của khách sạn cho
phép quý khách luôn kết nối với gia đình và bè bạn.</string>
    <string name="error_empty_email_password">Full login information required</string>
    <string name="error_unknown">An unusual error occurred.</string>
    <string name="success_login">Loggin successfully</string>
    <string name="success_login_description">Welcome back!</string>
    <string name="bath">BathRoom</string>
    <string name="bed">Bedroom</string>
    <string name="room">Room</string>
    <string name="adult">Adults</string>
    <string name="child">Children</string>
    <string name="enter_child_age">Enter child age</string>
    <string name="age">Age</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="bottom_title_home">Home</string>
    <string name="bottom_title_topResort">Top Resort</string>
    <string name="bottom_title_posting">Posting</string>
    <string name="bottom_title_booking">Booking</string>
    <string name="bottom_title_account">Account</string>
    <string name="search_location">Location</string>
    <string name="search_date">Date</string>
    <string name="search_tourie">Tourist</string>
    <string name="search_search">Search</string>
    <string name="suggest_title">Recommendations For You</string>
    <string name="suggest_seemore">See All</string>
    <string name="suggest_description">Based on the places you have searched</string>
    <string name="suggest_verify">Verified and Protected</string>
    <string name="suggest_resort_hotel">Resort and Hotel</string>
    <string name="suggest_resort_hotel_description">Discover the resort for you</string>
    <string name="suggest_resort_hotel_mb">Northern Vietnam</string>
    <string name="suggest_resort_hotel_mt">Central Vietnam</string>
    <string name="suggest_resort_hotel_mn">South Vietnam</string>
    <string name="destination_title">Special Tourist Destinations</string>
    <string name="destination_description">Explore famous tourist destinations</string>
    <string name="blog_title">Travel Guide</string>
    <string name="blog_description">Update information. Great trip</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="login_title_description">Join us, make every day a better version</string>
    <string name="profile_title">User Information</string>
    <string name="my_profile">User Information</string>
    <string name="my_dashboard">Analysis Report</string>
    <string name="my_timeshare">My Timeshare listing</string>
    <string name="my_rental_posting">My Rental Posting</string>
    <string name="my_exchange_posting">My Exchange Posting</string>
    <string name="my_exchange_request">My Exchange Request</string>
    <string name="my_order">My reservations</string>
    <string name="my_favorite">My travel interests</string>
    <string name="my_account_security">Account &amp; Security</string>
    <string name="my_account_link">Account link</string>
    <string name="help_center">Help center</string>
    <string name="version">Application version </string>
    <string name="term_policy">Term &amp; Policies</string>
    <string name="privacy_policy">Privacy Policies</string>
    <string name="setting">Setting language</string>
    <string name="vnp_success">Transaction successful</string>
    <string name="vnp_suspicious_transaction">Successful deduction. The transaction is suspected (related to fraud, abnormal transaction).</string>
    <string name="vnp_internet_banking_not_registered">Transaction failed: The customer\'s card/account has not registered for Internet Banking service at the bank.</string>
    <string name="vnp_authentication_failed_3_times">Transaction failed: The customer failed to authenticate card/account information more than 3 times.</string>
    <string name="vnp_payment_timeout">Transaction failed: Payment timeout has expired. Please try again.</string>
    <string name="vnp_account_blocked">Transaction failed: The customer\'s card/account is locked.</string>
    <string name="vnp_otp_incorrect">Transaction failed: The customer entered the incorrect OTP. Please try again.</string>
    <string name="vnp_unsuccessful_transaction">Transaction successful: The customer canceled the transaction.</string>
    <string name="vnp_insufficient_funds">Transaction failed: Your account does not have enough balance to complete the transaction.</string>
    <string name="vnp_daily_limit_exceeded">Transaction failed: Your account has exceeded the daily transaction limit.</string>
    <string name="vnp_bank_maintenance">The payment bank is under maintenance.</string>
    <string name="vnp_transaction_password_exceeded">Transaction failed: Incorrect transaction password entered too many times. Please try again.</string>
    <string name="vnp_other_errors">Other errors (remaining errors not listed in the error code list)</string>
    <string name="full_refund">100% refund if canceled 60 days prior</string>
    <string name="partial_refund">50% refund if canceled 60 days prior</string>
    <string name="no_refund">No refund if canceled</string>
    <string name="full_refund_long">Customers will receive a &lt;b&gt;100% refund&lt;/b&gt; if they cancel at least &lt;b&gt;60 days&lt;/b&gt; before check-in.</string>
    <string name="partial_refund_long">Customers will receive a &lt;b&gt;50% refund&lt;/b&gt; if they cancel within &lt;b&gt;60 days&lt;/b&gt; before check-in.</string>
    <string name="no_refund_long">Customers will &lt;b&gt;not receive a refund&lt;/b&gt; if they cancel.</string>
    <string name="valid_year_description">Years that are already booked or listed for exchange will not be displayed. Only available years for rental will appear in the list.</string>
    <string name="pending_approval">Pending Approval</string>
    <string name="waiting_confirmation">Awaiting Confirmation</string>
    <string name="processing">Processing</string>
    <string name="completed">Completed</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="reject_price">Reject Price</string>
    <string name="pending_pricing">Pending Pricing</string>
    <string name="closed">Closed</string>
    <string name="pending_owner">Pending Owner Approval</string>
    <string name="reject_approval">Rejected by Approval</string>
    <string name="pending_renter_pricing">Pending Renter Pricing</string>
    <string name="renter_reject">Rejected by Renter</string>
    <string name="owner_reject">Rejected by Owner</string>
    <string name="pending_renter_payment">Pending Renter Payment</string>
    <string name="pending_owner_payment">Pending Owner Payment</string>
    <string name="booked">Booked</string>
    <string name="checkin">Check-in</string>
    <string name="checkout">Checkout</string>
    <string name="no_show">No Show</string>
    <string name="cancelled">Cancelled</string>
    <string name="refund">Refund</string>
    <string name="payment_completed">Payment Completed</string>
    <string name="rental">Room For Rent</string>
    <string name="exchange">Exchange</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string-array name="spinner_items">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
    </string-array>
    <string-array name="spinner_gender_items">
        <item>Chọn giới tính</item>
        <item>Nam</item>
        <item>Nữ</item>
        <item>Khác</item>
    </string-array>
    <string-array name="cancellation_policy_options">
        <item>Chọn</item>
        <item>Hủy miễn phí</item>
        <item>Hủy trước 24 giờ</item>
        <item>Không hoàn tiền</item>
    </string-array>
    <string name="title_activity_transcation" translatable="false">TranscationActivity</string>
    <string name="tab_text_1" translatable="false">Tất Cả</string>
    <string name="tab_text_2" translatable="false">Thanh Toán</string>
    <string name="tab_text_3" translatable="false">Nhận Tiền</string>
    <string name="large_text" translatable="false">Settings</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="amenity_school" translatable="false">Trường học</string>
    <string name="amenity_hospital" translatable="false">Bệnh viện</string>
    <string name="amenity_restaurant" translatable="false">Nhà hàng</string>
    <string name="amenity_cafe" translatable="false">Quán cà phê</string>
    <string name="amenity_bar" translatable="false">Quán bar</string>
    <string name="amenity_parking" translatable="false">Bãi đỗ xe</string>
    <string name="amenity_bank" translatable="false">Ngân hàng</string>
    <string name="amenity_atm" translatable="false">ATM</string>
    <string name="amenity_bus_station" translatable="false">Trạm xe buýt</string>
    <string name="amenity_fuel" translatable="false">Trạm xăng</string>
    <string name="amenity_library" translatable="false">Thư viện</string>
    <string name="amenity_post_office" translatable="false">Bưu điện</string>
    <string name="amenity_police" translatable="false">Cảnh sát</string>
    <string name="amenity_fire_station" translatable="false">Trạm cứu hỏa</string>
    <string name="amenity_place_of_worship" translatable="false">Nơi thờ cúng</string>
    <string name="amenity_toilets" translatable="false">Nhà vệ sinh</string>
    <string name="amenity_fountain" translatable="false">Đài phun nước</string>
    <string name="amenity_townhall" translatable="false">Tòa thị chính</string>
    <string name="amenity_cinema" translatable="false">Rạp chiếu phim</string>
    <string name="amenity_theatre" translatable="false">Nhà hát</string>
    <string name="amenity_park" translatable="false">Công viên</string>
    <string name="amenity_playground" translatable="false">Khu vui chơi</string>
    <string name="amenity_sports_centre" translatable="false">Trung tâm thể thao</string>
    <string name="amenity_stadium" translatable="false">Sân vận động</string>
    <string name="amenity_marketplace" translatable="false">Chợ</string>
    <string name="amenity_supermarket" translatable="false">Siêu thị</string>
    <string name="amenity_pharmacy" translatable="false">Nhà thuốc</string>
    <string name="amenity_bicycle_rental" translatable="false">Cho thuê xe đạp</string>
    <string name="amenity_car_rental" translatable="false">Cho thuê xe ô tô</string>
    <string name="amenity_hotel" translatable="false">Khách sạn</string>
    <string name="amenity_motel" translatable="false">Nhà nghỉ</string>
</resources>