<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/bottom_title_home"

        />
    <item
        android:id="@+id/topResort"
        android:icon="@drawable/ic_top_resort"
        android:title="@string/bottom_title_topResort" />

    <item
        android:id="@+id/exchange"
        android:icon="@drawable/ic_booking"
        android:title="@string/bottom_title_booking"

        />
    <item
        android:id="@+id/posting"
        android:icon="@drawable/ic_sent"
        android:title="@string/bottom_title_posting">

    </item>
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_account"
        android:title="@string/bottom_title_account"

        />

</menu>