<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.tep_timeshareexchangeplatform.AppConfig.CustomView.CustomToolbar.CustomToolbar
        android:id="@+id/customToolbar"
        app:textStart="@string/back"
        android:title="@string/login_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:id="@+id/imageContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customToolbar">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/anim_login"/>

    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:id="@+id/text_container"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/imageContent"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/logo_unwind_horizontal"
          >
        </ImageView>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/backgroud_earth"
            android:layout_width="200dp"
            android:layout_height="6dp">
        </LinearLayout>
        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/intro_description"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/login_title_description"
            android:textAlignment="center"
            android:textColor="@color/gray_600"
            android:textSize="18dp" />

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ripple_effect_white"
            android:backgroundTint="@color/blue_full"
            android:textAllCaps="false"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ripple_effect"
            android:fontFamily="@font/inter_semibold"
            android:textAllCaps="false"
            android:text="@string/register_title"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>