<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:backgroundTint="@color/white"
    android:background="@drawable/background_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--// Room-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/im_add_room"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/primary_background"
            android:src="@drawable/baseline_add_circle_outline_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tv_room_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/inter_bold"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/im_add_room"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/im_remove_room"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_remove_circle_outline_24_c9c9c9"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_room_count"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/backgroud_earth"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--// Adult-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adult"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/im_add_adult"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/primary_background"
            android:src="@drawable/baseline_add_circle_outline_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tv_adult_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/inter_bold"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/im_add_adult"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/im_remove_adult"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_remove_circle_outline_24_c9c9c9"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_adult_count"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/backgroud_earth"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--// Child-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/im_add_child"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/primary_background"
            android:src="@drawable/baseline_add_circle_outline_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tv_child_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/inter_bold"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/im_add_child"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/im_remove_child"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_remove_circle_outline_24_c9c9c9"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_child_count"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/backgroud_earth"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--// Enter Children Age-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cstl_child_age_container"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_extrabold"
            android:text="@string/enter_child_age"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/child"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Spinner
            android:id="@+id/spinnerChildAge"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:background="@drawable/background_stroke_around"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--// Action Button-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:background="@drawable/background_stroke_around"
            android:backgroundTint="@color/primary_background"
            android:fontFamily="@font/inter_bold"
            android:text="@string/cancel"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_accept"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:background="@drawable/background_stroke_around"
            android:backgroundTint="@color/blue_full"
            android:fontFamily="@font/inter_bold"
            android:text="@string/accept"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>




</LinearLayout>