<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_dialog_search_component"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_location"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_stroke_around"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.75"
                android:gravity="center">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_location" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8.25"
                android:gravity="left"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:weightSum="10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:fontFamily="@font/inter_bold"
                    android:gravity="center|left"
                    android:text="@string/search_location"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center|left"
                    android:text="Thành Phố Hồ Chí Minh, Việt Nam"
                    android:textColor="@color/black"
                    android:textSize="12dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_date"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_stroke_around"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.75"
                android:gravity="center">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_schedule" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8.25"
                android:gravity="left"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:weightSum="10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:fontFamily="@font/inter_bold"
                    android:gravity="center|left"
                    android:text="@string/search_date"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center|left"
                    android:text="01/09/2024 - 02/09/2024"
                    android:textColor="@color/black"
                    android:textSize="12dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tourist"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/background_stroke_around"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.75"
                android:gravity="center">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_person" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8.25"
                android:gravity="left"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:weightSum="10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:fontFamily="@font/inter_bold"
                    android:gravity="center|left"
                    android:text="@string/search_tourie"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_tourist"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center|left"
                    android:text="5 khách, 2 phòng"
                    android:textColor="@color/black"
                    android:textSize="12dp" />

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/background_btn_search"
            android:fontFamily="@font/inter_bold"
            android:text="@string/search_search"
            android:textColor="@color/white"
            android:textSize="16dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>